# MLMousePath

./: .gitignore  README.md  collect_mouse_data.py  collect_time_seq.py  deiable_mouse_speedup.py  demo.py  normal_mouse_data.py  predict.py  predict_time_seq.py  pyproject.toml  requiremens.txt  setup.py  show.py  time_seq_mouse_data.py  train.py
.github/workflows/: publish.yml
mlmouse/: __init__.py  normal_mouse_data.py  predict.py  time_seq_mouse_data.py  time_seq_train.py  train.py
mlmp/: __init__.py  normal_mouse_data.py  predict.py
source/: normal_mouse_data.py  time_seq_train.py  train.py
