[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlmp"
version = "0.1.3"
authors = [
    { name = "zaixia108", email = "xvbowen2012@gmail.com" }
]
description = "A Python package for mouse path control and training."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "onnxruntime",
]
urls = { homepage = "https://github.com/zaixia108/MLMousePath" }

[tool.setuptools.package-data]
mlmp = ["*.dll"]